# tokrou

./: .gitignore  Makefile  README.md  cli.py  main.py  pyproject.toml  tldr.md
.kiro/specs/dynamic-model-config/: design.md  requirements.md  tasks.md
.kiro/specs/llm-cost-predictor/: design.md  requirements.md  tasks.md
backend/: __init__.py
backend/api/: __init__.py
backend/cli/: __init__.py
backend/core/: __init__.py  config_loader.py  config_validator.py  log_parser.py  token_estimator.py  types.py
config/: pricing.json  pricing.yaml  routing.json  simulation.json  simulation.yaml  tiers.json  token_estimation.json  token_estimation.yaml
config/profiles/: .gitkeep  baseline.json  baseline.yaml  conservative.json  conservative.yaml  default.json  optimistic.json  optimistic.yaml
core/: __init__.py  config.py  token_estimator.py  types.py
output/: .gitkeep
tests/: __init__.py  test_config.py  test_token_estimator.py  test_types.py
tests/property/: test_config_properties.py
tests/unit/: test_config_loader.py  test_config_validator.py  test_types.py
